--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,19 +10,132 @@ body {
     padding: 2rem;
     height: 100vh;
     background: linear-gradient(to bottom,#ff5e88,#ff9966);
-    h1{
-        text-align: center;
+
+    #overlay {
+        position: fixed;
+        display: block;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.5);
+        z-index: 2;
+        cursor: pointer;
+    }
+    #viewCard{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size: 50px;
+        color: black;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        margin:auto;
+        background: #fff;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 18px;
+        padding: 20px;
+
+        
+
+    }
+    
+    button{
+        background: white;
+        border: none;
+    }
+    .search{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        background: white;
+        border-radius: 30px;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-bottom: 25px; 
+        width: 80%;
+        margin: auto;
+        margin-bottom: 10px;
+
+        input[type=text]{
+            flex:1;
+            border: none;
+            outline: none;
+            background: white;
+            padding: 10px;
+            font-size: 17px;
+        }
+
+    }
+    .icon{
+        width: 20px;
+        height: 20px;
+        padding: 0 5px;
+        cursor: pointer;
+    }
+
+    .top{
+        display: flex;
+        justify-content: space-around;
         color:#fff;
-        margin-bottom: 2rem;
+        margin-right: 31%;
+        h1{
+            text-align: center;
+            margin-bottom: 2rem;
+            justify-content: center;
+        }
+        .Snav{
+            font-size:30px;
+            cursor:pointer;
+            margin: 0 0 30px 0;
+        }
+    }
+    
+    .sidenav {
+        display: none;
+        height: 100%;
+        width: 250px;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        padding-top: 60px;
+        
+        a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+        }
+        a:hover {
+            color: #f1f1f1;
+        }
+        .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
     }
     .wrapper {
         width: 380px;
-        margin: auto;
+        margin:auto;
         background: #fff;
         border: 1px solid #ccc;
         border-radius: 5px;
         padding: 20px;
         box-shadow: 0 0 5px #ccc;
+        display: block;
+
+        
+
         header {
             display: flex;
             justify-content: space-between;
@@ -96,13 +209,63 @@ body {
                 li.active::before{
                     background-color: #985986;
                 }
+                li:hover::before{
+                    background: #f2f2f2;
+                }
                 
             }
         }
     }
-}
+    .TaskManager{
+        width: 100%; 
+        max-width: 500px;
+        background: #fff;
+        margin: 100px auto 20px;
+        padding: 40px 30px 70px;
+        border-radius: 10px;
+        display: none;
 
-.days li:hover::before{
-    background: #f2f2f2;
-}
+        h2{
+            color: #002765;
+            margin-bottom: 20px;
+        }
+        .row{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #edeef0;
+            border-radius: 30px;
+            padding-left: 20px;
+            margin-bottom: 25px;
+        }
 
+        input{
+            flex:1;
+            border: none;
+            outline: none;
+            background: transparent;
+            padding: 10px;
+            font-weight: 14px;
+        }
+       
+        button{
+            border: none;
+            outline: none;
+            padding: 16px 50px;
+            background: #ff7e70;
+            color:#fff;
+            font-size: 16px;
+            cursor: pointer;
+            border-radius: 40px;
+        }
+        ul{ li{
+            list-style: none;
+            font-size: 17px;
+            padding: 12px 8px 12px 0px;
+            user-select: none;
+            cursor: pointer;
+        }}
+    }
+
+    
+}
